# napari-cryoet-data-portal

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
examples/: demo-sample.py  demo.py
src/napari_cryoet_data_portal/: __init__.py  _control_widget.py  _filter.py  _io.py  _listing_tree_widget.py  _listing_widget.py  _logging.py  _metadata_widget.py  _model.py  _open_widget.py  _preview_list_widget.py  _preview_widget.py  _progress_widget.py  _reader.py  _sample_data.py  _task_worker.py  _uri_widget.py  _widget.py  napari.yaml
src/napari_cryoet_data_portal/_tests/: _mocks.py  _utils.py  conftest.py  test_listing_widget.py  test_metadata_widget.py  test_model.py  test_open_widget.py  test_reader.py  test_sample.py  test_uri_widget.py  test_widget.py
src/napari_cryoet_data_portal/_vendored/superqt/: _searchable_tree_widget.py
tests/: test_listing_widget.py  test_metadata_widget.py  test_reader.py  test_uri_widget.py
