[metadata]
name = napari-cryoet-data-portal

description = List, preview, and open data from the CZII CryoET Data Portal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chanzuckerberg/napari-cryoet-data-portal
author = Andy Sweet
author_email = andrewdsweet@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/chanzuckerberg/napari-cryoet-data-portal/issues
    Documentation = https://github.com/chanzuckerberg/napari-cryoet-data-portal#README.md
    Source Code = https://github.com/chanzuckerberg/napari-cryoet-data-portal
    User Support = https://github.com/chanzuckerberg/napari-cryoet-data-portal/issues

[options]
packages = find:
install_requires =
    cryoet_data_portal
    fsspec[https]
    npe2
    numpy
    napari_ome_zarr
    ndjson
    qtpy
    s3fs
    superqt

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cryoet-data-portal = napari_cryoet_data_portal:napari.yaml

[options.extras_require]
testing =
    tox
    pytest
    pytest-cov
    pytest-qt
    napari
    pyqt5

[options.package_data]
* = *.yaml

[coverage:run]
omit = **/_tests/**
